# rust-crud-api

./: .env  Cargo.toml  README.md
Database/: 1_CreateTables.sql  2_CreateStoredProcedures.sql
src/: main.rs
src/handlers/: auth_handler.rs  mod.rs  notes_handler.rs  users_handler.rs
src/models/: auth_model.rs  mod.rs  notes_model.rs  users_model.rs
src/routes/: mod.rs
src/services/: auth_service.rs  database.rs  mod.rs  note_service.rs  user_service.rs
src/utils/: auth_middleware.rs  jwt.rs  mod.rs
